Now the Android endpoint is up, the IP address of the PC is now stored in text file

--- a/ServerConsole/app.config
+++ b/ServerConsole/app.config
@@ -13,6 +13,7 @@
 
 
     <behaviors>
+
       <serviceBehaviors>
         <behavior name="SyncService.IPSyncBehavior">
           <serviceDebug includeExceptionDetailInFaults="true" />
@@ -23,9 +24,20 @@
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
-        
+
       </serviceBehaviors>
+
+      <endpointBehaviors>
+        <behavior name="web_behavior">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
     </behaviors>
+
+    <bindings>
+
+    </bindings>
+
     <services>
       <service behaviorConfiguration="SyncService.IPSyncBehavior" name="SyncService.IPSync">
         <endpoint address="" binding="netTcpBinding" bindingConfiguration=""
@@ -40,7 +52,7 @@
       </service>
 
       <service name="SyncService.IPGetter">
-        <endpoint address="" binding="basicHttpBinding" contract="SyncService.IIPGetter">
+        <endpoint address="" binding="webHttpBinding" contract="SyncService.IIPGetter" behaviorConfiguration="web_behavior" >
           <identity>
             <dns value="localhost" />
           </identity>
@@ -48,12 +60,12 @@
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:9002" />
+            <add baseAddress="http://localhost:9002/IPGetterService" />
           </baseAddresses>
         </host>
       </service>
-      
-      
+
+
     </services>
   </system.serviceModel>
 
