--- a/SyncService/App.config
+++ b/SyncService/App.config
@@ -13,6 +13,7 @@
 
 
     <behaviors>
+      
       <serviceBehaviors>
         <behavior name="SyncService.IPSyncBehavior">
           <serviceDebug includeExceptionDetailInFaults="true" />
@@ -28,19 +29,13 @@
     
     <endpointBehaviors>
        <behavior name="web_behavior">
-          <webHttp helpEnabled="True" />
+          <webHttp />
        </behavior>
     </endpointBehaviors>
     </behaviors>
     
     <bindings>
-      <webHttpBinding>
-        <binding
-         name="web_http"
-         bypassProxyOnLocal="false"
-         hostNameComparisonMode="WeakWildcard">          
-       </binding>
-  </webHttpBinding>
+
     </bindings>
         
     <services>
@@ -57,7 +52,7 @@
       </service>
 
       <service name="SyncService.IPGetter">
-        <endpoint address="" binding="webHttpBinding" contract="SyncService.IIPGetter" behaviorConfiguration="web_behavior" bindingConfiguration="web_http">
+        <endpoint address="" binding="webHttpBinding" contract="SyncService.IIPGetter" behaviorConfiguration="web_behavior" >
           <identity>
             <dns value="localhost" />
           </identity>
