Users database, login service api, fetch IP from database , JWT creator

--- a/SyncService/App.config
+++ b/SyncService/App.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+<!--
+      // a good question would be - where to expose the servicess when it hosted by applications
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -7,8 +9,7 @@
   <system.web>
     <compilation debug="true" />
   </system.web>
-  <!-- When deploying the service library project, the content of the config file must be added to the host's 
-  app.config file. System.Configuration does not support config files for libraries. -->
+
   <system.serviceModel>
 
 
@@ -68,5 +69,35 @@
       
     </services>
   </system.serviceModel>
-
+-->
+    
+  
+  <!--
+<system.serviceModel>
+        <behaviors>
+            <serviceBehaviors>
+                <behavior name="">
+                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+                    <serviceDebug includeExceptionDetailInFaults="false" />
+                </behavior>
+            </serviceBehaviors>
+        </behaviors>
+        <services>
+            <service name="SyncService.UserLogin">
+                <endpoint address="" binding="basicHttpBinding" contract="SyncService.IUserLogin">
+                    <identity>
+                        <dns value="localhost" />
+                    </identity>
+                </endpoint>
+                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+                <host>
+                    <baseAddresses>
+                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/SyncService/UserLogin/" />
+                    </baseAddresses>
+                </host>
+            </service>
+        </services>
+    </system.serviceModel>
+    
+    -->
 </configuration>
