--- a/DatabaseLinker/DatabaseLinker.csproj
+++ b/DatabaseLinker/DatabaseLinker.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DB.cs" />
     <Compile Include="IPSyncBL.cs" />
     <Compile Include="IPSyncDAL.cs" />
     <Compile Include="Program.cs" />
