--- a/ServerConsole/app.config
+++ b/ServerConsole/app.config
@@ -31,6 +31,10 @@
         <behavior name="web_behavior">
           <webHttp />
         </behavior>
+
+        <behavior name="webHttp">
+          <webHttp defaultOutgoingResponseFormat="Json"/>
+        </behavior>
       </endpointBehaviors>
     </behaviors>
 
@@ -39,6 +43,8 @@
     </bindings>
 
     <services>
+      
+      <!-- IP Sync service with the pc -->
       <service behaviorConfiguration="SyncService.IPSyncBehavior" name="SyncService.IPSync">
         <endpoint address="" binding="netTcpBinding" bindingConfiguration=""
           name="IPSync_netTcpEndPoint" contract="SyncService.IIPSync" />
@@ -51,6 +57,7 @@
         </host>
       </service>
 
+      <!-- IP Getter service - IP requested by the android application -->
       <service name="SyncService.IPGetter">
         <endpoint address="" binding="webHttpBinding" contract="SyncService.IIPGetter" behaviorConfiguration="web_behavior" >
           <identity>
@@ -65,6 +72,25 @@
         </host>
       </service>
 
+      <!-- User login attempt service-->
+      <service name="LoginService.UserLogin">
+        <endpoint address="auth" binding="webHttpBinding" contract="LoginService.IUserLogin" behaviorConfiguration="web_behavior">
+            <identity>
+                <dns value="localhost" />
+            </identity>
+        </endpoint>
+        <endpoint address="" binding="basicHttpBinding" contract="LoginService.IUserLogin">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+            <baseAddresses>
+                <add baseAddress="http://localhost:9004/Login" />
+            </baseAddresses>
+        </host>
+      </service>
 
     </services>
   </system.serviceModel>
